--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -33,7 +33,7 @@ on early-init
     symlink /data/tombstones /tombstones
 
 on fs
-    wait /dev/block/bootdevice
+    symlink /dev/block/platform/soc.0/f9824900.sdhci /dev/block/bootdevice
     mount_all fstab.qcom
     swapon_all fstab.qcom
 
